--- a/InventoryTweaks.csproj
+++ b/InventoryTweaks.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\..\Program Files %28x86%29\Steam\steamapps\common\Pathfinder Kingmaker\Mods\InventoryTweaks\</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -32,22 +32,25 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>..\..\KingmakerLib\0Harmony.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityModManager\0Harmony.dll</HintPath>
+    </Reference>
+    <Reference Include="0Harmony12">
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityModManager\0Harmony12.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\KingmakerLib\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>..\..\KingmakerLib\Assembly-CSharp-firstpass.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="DOTween">
-      <HintPath>..\..\KingmakerLib\DOTween.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\DOTween.dll</HintPath>
     </Reference>
     <Reference Include="DOTween46">
-      <HintPath>..\..\KingmakerLib\DOTween46.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\DOTween46.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\KingmakerLib\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,40 +61,40 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\KingmakerLib\UnityEngine.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AnimationModule">
-      <HintPath>..\..\KingmakerLib\UnityEngine.AnimationModule.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityEngine.AnimationModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AudioModule">
-      <HintPath>..\..\KingmakerLib\UnityEngine.AudioModule.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityEngine.AudioModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\KingmakerLib\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.ImageConversionModule">
-      <HintPath>..\..\KingmakerLib\UnityEngine.ImageConversionModule.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityEngine.ImageConversionModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.IMGUIModule">
-      <HintPath>..\..\KingmakerLib\UnityEngine.IMGUIModule.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.JSONSerializeModule">
-      <HintPath>..\..\KingmakerLib\UnityEngine.JSONSerializeModule.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityEngine.JSONSerializeModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.ParticleSystemModule">
-      <HintPath>..\..\KingmakerLib\UnityEngine.ParticleSystemModule.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityEngine.ParticleSystemModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.TextRenderingModule">
-      <HintPath>..\..\KingmakerLib\UnityEngine.TextRenderingModule.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>..\..\KingmakerLib\UnityEngine.UI.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UIModule">
-      <HintPath>..\..\KingmakerLib\UnityEngine.UIModule.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityEngine.UIModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityModManager">
-      <HintPath>..\..\KingmakerLib\UnityModManager.dll</HintPath>
+      <HintPath>..\..\Kingmaker_Data\Managed\UnityModManager\UnityModManager.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -139,7 +142,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <Import Project="..\KingmakerModMaker2\ModMaker\ModMaker.projitems" Label="Shared" />
+  <Import Project="..\KingmakerModMaker\ModMaker\ModMaker.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>if $(ConfigurationName) == Release (
@@ -148,6 +151,8 @@
   copy $(TargetName)$(TargetExt) .\$(TargetName)\$(TargetName)$(TargetExt) /Y
   copy info.json .\$(TargetName)\info.json /Y
   "C:\Program Files\7-Zip\7z.exe" u -tzip $(TargetName).zip $(TargetName)
-)</PostBuildEvent>
+)
+
+start xcopy /y /r "$(TargetPath)" "X:\_PathfinderKingmaker\Mods\$(ProjectName)\$(ProjectName).dll"</PostBuildEvent>
   </PropertyGroup>
 </Project>
